tests/import/resolution_scope/negative_nested_scope_validation/dep_collision_bad.ott
import base ::=
  | tm

grammar
tm :: 'LocalTm_' ::=
  | 'd' :: :: local
